lots of cleanup in help pages and order page

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,12 +1,14 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
   <aside class="span3">
+  <% if @user %>
     <section>
       <h4>
         <%= link_to @user.name, current_user %>
       </h4>
       <h6>  <%= link_to "Edit Profile", edit_user_path(current_user) %> |  <%= link_to "Log Out", signout_path, method: "delete" %> </h6>
     </section>
+    <% end %>
     <section>
       <div id="cart">
         <%= render @cart %>
