--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,19 +1,16 @@
 <% provide(:title, 'About us') %>
 <%= image_tag("earthday.jpg") %>
-<div class="row">
-  
-<div class="span11">
+<div class="row">  
+  <div class="span11">
+    <h4>About Us</h4>
+    <p>ThankTheTeacher.com facilitates the funding and ordering Gift Cards for our teachers and coaches. We let parents select how much they would like to contribue and who they would like to contribute to. Then we sum up the contributions and help you order the gift cards.</p>
 
-  <h4>About Us</h4>
-  <p>ThankTheTeacher.com facilitates the Gift Card process for teachers and coaches. We let parents select how much they would like to contribue to each teacher and then sum up the contributions and help order a gift card.</p>
+    <h4>Our Gift Cards</h4>
+    <p>We get our Cards from Amazon.com. Amazon.com gives us a 6% commission on our Gift Card purchaces. We give <strong>5%</strong> back to the person that organized the Gift Card Campaign. Thank the Teacher takes 1% to run the site.Although we do now dictate how your 5% cash back will be used, our expectation is that it will be donated back to your school or athletic organization.</p>
 
-  <h4>Our Gift Cards</h4>
-  <p>We get our Cards from Amazon.com. Amazon.com gives us a 6% commission on our Gift Card purchaces. We give 5% back to the person that organized the Gift Card Campaign. Thank the Teacher takes 1% to run the site. </p>
+    <h4>Service Fees</h4>
+    <p>It costs us about 3% of each transaction to process credit cards on a secure server. At checkout, we add a small fee to cover this cost. </p>
 
-  <h4>Service Fees</h4>
-  <p>It costs us about 3% of each transaction to process credit cards on a secure server. At checkout, we add a small fee to cover this cost. </p>
-
-  <p>If you have questions, suggestions, or need help,please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>. </p>
+    <p>If you have questions, suggestions, or need help,please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>. </p>
   </div>
 </div>
-
