--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
   <h1>Parent Funded Gift Cards</h1>
   <h1>for Teachers and Coaches</h1>
   <h2>
-    And <%= link_to "5% Cash Back", about_path %> to the campaign organizer.
+    And <%= link_to "5% Cash Back", about_path %> to the Campaign Organizer
   </h2>
 
   <%= link_to "Sign up", signup_path, class: "btn btn-large btn-primary" %>
