--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,34 +1,32 @@
 <div class="row">
   <aside class="span3">
     <section>
-      <h1>
-        <%= render @cart %>
-      </h1>
+      <%= render @cart %>
     </section>
   </aside>
-
-<div class="span4">
-  <fieldset>
-    <h5>Your Order</h5>
-      <table class="table table-bordered">
-        <tr>
-          <th>Cart:</th>
-          <td><%= (number_to_currency@cart.total_price) %></td>
-        </tr>
-        <tr>
-          <th>Handling Fee:</th>
-          <td><%= (number_to_currency@service_fee) %> </td>
-        </tr>
-          <th>Order Total:</th>
-          <td><%= (number_to_currency@total_transaction_amount)  %></td>
-        </tr>
-      </table>
+  <div class="span4">
+    <h4>Checkout</h4>
+    <table class="table table-bordered">
+      <tr>
+        <th>Cart:</th>
+        <td><%= (number_to_currency@cart.total_price) %></td>
+      </tr>
+      <tr>
+        <th>Handling Fee:</th>
+        <td><%= (number_to_currency@service_fee) %> </td>
+      </tr>
+        <th>Order Total:</th>
+        <td><%= (number_to_currency@total_transaction_amount)  %></td>
+      </tr>
+    </table>
+    <%= button_to 'Continue Shopping', campaigns_path, method: :get, class: "btn-small btn-primary" %>
+  </div>
+  <div class="span5">
+    <div class="well"> 5% of this transaction (<%= (number_to_currency@organizer_credit) %>) will be donated to the organization running this giftcard campaign. <br><br>
+    The handling fee pays for credit card processing on Stripe.com. Stripe encrypts and processes all credit card transactions. No credit card information is ever stored on ThankTheTeacher.com. 
     </div>
-  </fieldset>
-    <div class="span8">
-      <div class="well"> 5% of this transaction (<%= (number_to_currency@organizer_credit) %>) will be donated to the organization running this giftcard campaign. 
-      </div>
-      <%= button_to 'Continue Shopping', campaigns_path, method: :get, class: "btn-small btn-primary" %>
-      <%= render 'form' %>
+  </div>
+  <div class="span8">
+    <%= render 'form' %>
   </div>
 </div>
