--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,14 +3,26 @@
 <div class="row">  
   <div class="span11">
     <h4>About Us</h4>
-    <p>ThankTheTeacher.com facilitates the funding and ordering Gift Cards for our teachers and coaches. We let parents select how much they would like to contribue and who they would like to contribute to. Then we sum up the contributions and help you order the gift cards.</p>
+    <p>ThankTheTeacher.com facilitates funding and ordering Gift Cards for our teachers and coaches. We let parents select how much they would like to contribue and who they would like to contribute to. Then we sum up the contributions and help the Gift Card Organizer order the cards and print "thank you" letters that list all of the contributors. Check out an <%= link_to "example Gift Card Campaign", @campaign %> here.</p>
 
     <h4>Our Gift Cards</h4>
-    <p>We get our Cards from Amazon.com. Amazon.com gives us a 6% commission on our Gift Card purchaces. We give <strong>5%</strong> back to the person that organized the Gift Card Campaign. Thank the Teacher takes 1% to run the site.Although we do now dictate how your 5% cash back will be used, our expectation is that it will be donated back to your school or athletic organization.</p>
+    <p>We get our Gift Cards from Amazon.com. Amazon.com gives us a 6% commission on  card purchaces. We give <strong>5% cash back</strong> to the organization running the Gift Card Campaign and keep 1% to run the site. Although we do not dictate how cash back funds will be used, our expectation is that it will be donated back to your school or athletic organization.</p>
+
+    <div class="well">
+      <em>Example:</em> A $100 Gift Card purchase generates $5.00 for the organization running the Gift Card Campaign.
+    </div>
 
     <h4>Service Fees</h4>
-    <p>It costs us about 3% of each transaction to process credit cards on a secure server. At checkout, we add a small fee to cover this cost. </p>
+    <p>It costs us about 3% of the transaction to process credit cards on a secure server <em><small>(total price x 3.1% + $.30 to be exact)</small></em>. At checkout, we add a small fee to cover this cost. </p>
+    
+    <div class="well">
+      <em>Example:</em> A $3.40 service fee will be added to a $100 Gift Card purchase at the time of checkout.
+    </div>
 
-    <p>If you have questions, suggestions, or need help,please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>. </p>
+    <h4>Security</h4>
+    <p>At checkout, credit card information is immediately encrypted and sent directly to our payment processing service Stripe.com. Credit card information is <u>never</u> stored on ThankTheTeacher.com. </p>
+
+    <br>
+    <p>If you have questions, suggestions, or need help, please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>. </p>
   </div>
 </div>
