--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Help') %>
 <h3>Help</h3>
-<em>This page describes how to run a successful giftcard campaign.</em><br>
+<em>This page describes how to run a successful giftcard campaign on ThankTheTeacher.com.</em><br>
 
 
 <h5>Step 1: Setup</h5>
