new gift card image

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
     <h4>About Us</h4>
     <p>ThankTheTeacher.com facilitates funding and ordering Gift Cards for our teachers and coaches. We let parents select how much they would like to contribue and who they would like to contribute to. Then we sum up the contributions and help the Gift Card Organizer order the cards and print "thank you" letters that list all of the contributors. Check out an <%= link_to "example Gift Card Campaign", @campaign %> here.</p>
 
-    <h4>Our Gift Cards</h4>
+    <h4>Gift Cards & Commissions</h4>
     <p>We get our Gift Cards from Amazon.com. Amazon.com gives us a 6% commission on  card purchaces. We give <strong>5% cash back</strong> to the organization running the Gift Card Campaign and keep 1% to run the site. Although we do not dictate how cash back funds will be used, our expectation is that it will be donated back to your school or athletic organization.</p>
 
     <div class="well">
