--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,5 +7,5 @@
 
   <%= link_to "Sign up", signup_path, class: "btn btn-large btn-primary" %>
 </div>
-<%= link_to image_tag("img-giftcards.jpg",
+<%= link_to image_tag("gift-card-amazon.png",
                         alt: "Teachers & Coaches Love Giftcards!"), about_path%>
