--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,10 +3,10 @@
 <div class="row">  
   <div class="span11">
     <h4>About Us</h4>
-    <p>ThankTheTeacher.com facilitates funding and ordering Gift Cards for our teachers and coaches. We help Gift Card Organizers create a custom web page <%= link_to "(see example)", @campaign %> where parents may select how much they would like to gift and who they would like to gift to. Then we sum up the contributions and help the Gift Card Organizer order the cards and print "thank you" letters that list all of the contributors.</p>
+    <p>ThankTheTeacher.com facilitates the funding and ordering of Gift Cards for our teachers and coaches. We help Gift Card Organizers create a custom web page <%= link_to "(here's an example)", @campaign %> where parents may select how much they would like to gift and who they would like to gift to. Then we sum up the contributions and help the Organizers order Gift Cards and print "thank you" letters that list all of the contributors.</p>
 
     <h4>Gift Cards & Commissions</h4>
-    <p>We get our Gift Cards from Amazon.com. Amazon.com gives us a 6% commission on  card purchaces. We give <strong>5% cash back</strong> to the organization running the Gift Card Campaign and keep 1% to run the site. Although we do not dictate how commissions are used, our expectation is that the Gift Card Campaign Organizer will donate these funds back to the participating organization.</p>
+    <p>We get our Gift Cards from Amazon.com. Amazon gives us a 6% commission on  card purchaces. We give <strong>5% cash back</strong> to the organization running the Gift Card Campaign and keep 1% to run the site. Although we do not dictate how commissions are used, our expectation is that Gift Card Campaign Organizers will donate these funds back to their participating organization.</p>
 
     <div class="well", align="center">
       <em>Example:</em> A $100 Gift Card purchase generates $5.00 for the organization running the Gift Card Campaign.
@@ -16,7 +16,7 @@
     <p>It costs us about 3% of the transaction to process credit cards on a secure server <em><small>(total price x 3.1% + $.30 to be exact)</small></em>. At checkout, we add a small fee to cover this cost. </p>
     
     <div class="well", align="center">
-      <em>Example:</em> A $3.40 service fee will be added to a $100 Gift Card purchase at the time of checkout.
+      <em>Example:</em> A $3.40 service fee will be added to a $100 Gift Card contribution at the time of checkout.
     </div>
 
     <h4>Security</h4>
