--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,8 @@
 <% provide(:title, 'Help') %>
-<h3>Help</h3>
-<em>This page describes how to run a successful giftcard campaign on ThankTheTeacher.com.</em><br>
+<h3>How to Run a Successful Gift Card Campaign</h3>
 
 
-<h5>Step 1: Setup</h5>
+<h5>Account Setup</h5>
 <li>Create an account on ThankTheTeacher.com.</li>
 <h5>Step 2:  Create a Gift Card Campaign</h5>
   <li>In your account, click “New Campaign”. </li>
