--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title><%= full_title(yield(:title)) %> </title>
     <%= stylesheet_link_tag    "application", media: "all", 
       "data-turbolinks-track" => true %>
-    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <%= yield(:head) %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
     <%= render 'layouts/shim' %>
