--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:head) do  %>
+  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+<% end %>
 <div class="row">
   <aside class="span3">
     <section>
