--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %> </title>
+    <%= favicon_link_tag 'appleico.ico' %>
     <%= stylesheet_link_tag    "application", media: "all", 
       "data-turbolinks-track" => true %>
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
