comment out force_ssl

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -4,6 +4,7 @@
       <%= render @cart %>
     </section>
   </aside>
+  <div class="row">
   <div class="span4">
     <h4>Checkout</h4>
     <table class="table table-bordered">
@@ -26,5 +27,7 @@
     The handling fee pays for credit card processing. Our service provider, Stripe.com, encrypts and processes all credit card transactions. Credit card information is <u>never</u> stored on ThankTheTeacher.com. 
     </div>
   </div>
+
   <%= render 'form' %>
+</div>
 </div>
