--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -32,7 +32,7 @@
       Dear Parents, <br><br>
       Show our staff how much you appreciate them and share the warmth of the holiday season by contributing to their Amazon gift card account.<br><br>
       Simply click on the link below and choose the staff members and amounts you wish to gift. We will order Amazon gift cards and deliver them to the staff. A note will accompany the cards recognizing the contributor's names. <br><br>
-      <%= link_to "www.thanktheteacher.com/campaigns/1", "www.thanktheteacher.com/campaigns/1" %><br><br>
+      <%= link_to "www.thanktheteacher.com/campaigns/1", "campaigns/1" %><br><br>
       A note will accompany the cards recognizing the contributor's names. Take the guess work out of gift cards and as a bonus, Amazon will send a percentage of money on orders back to our school. Don't forget your bus driver, specials teachers and school staff too! <br><br>
 
       Please note this program is being provided as a convenience for our families, and is totally optional. <br><br>
