--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
     And, <%= link_to "5% Cash Back", about_path, {:style => 'color: #FF9900'} %> to the Campaign Organizer
   </h2>
 
-  <%= link_to "Sign up", signup_path, class: "btn btn-large btn-warning" %>
+  <%#= link_to "Sign up", signup_path, class: "btn btn-large btn-warning" %>
 </div>
 <%= link_to image_tag("gift-card-amazon.png",
                         alt: "Teachers & Coaches Love Giftcards!"), about_path%>
