--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -6,9 +6,13 @@
  <%= render(@cart.line_items) %>
 
   <tr>
-    <td><strong><%= (number_to_currency@cart.total_price) %>
-    </strong></td>
     <td><strong>Total</strong></td>
+    <td>
+      <div class="text-right" >
+        <strong><%= (number_to_currency@cart.total_price) %></strong>
+      </div>
+     </td>
+    
   </tr>
 </table>
   <%= button_to 'Checkout', new_order_path, method: :get, class: "btn-small btn-primary"  %>
