--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -28,11 +28,13 @@
   <% if @recipients.any? %>
     
     <p class="recipients">
-    <table border=1><tr>
-      <th align="right">Name</th>
-      <th align="left"></th>
-      <th align="left">Occupation</th>
-      <th align="left">Gift</th></tr>
+    <table class="table table-striped table-bordered">
+      <tr>
+        <th align="right">Name</th>
+        <th align="left"></th>
+        <th align="left">Occupation</th>
+        <th align="left">Gift</th>
+      </tr>
       <%= render @recipients %>
     </table>
     </p>
