--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -27,8 +27,7 @@
   <%#= will_paginate %>
   <% if @recipients.any? %>
     
-    <p class="recipients">
-    <table class="table table-striped table-bordered">
+    <table id="recipients" class="table table-striped table-bordered">
       <tr>
         <th align="right">Name</th>
         <th align="left"></th>
@@ -37,7 +36,6 @@
       </tr>
       <%= render @recipients %>
     </table>
-    </p>
     <%#= will_paginate %>
   <% else %>
     <br>
