--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -10,13 +10,16 @@
       </ul>
     </div>
   <% end %>
-  <h4>Order Information </h4>
+
   <div class="span8 offset3">
-    <%= f.label :name %> <em>Your name will be printed on the recipients' gift card greeting.</em><br>
+    <h3 align="center">Order Information </h3>
+  </div>
+  <div class="span8 offset3">
+    <%= f.label :name %> <em>Name will be printed on the recipients' gift card greeting. Ok to use your kids' names here.</em><br>
     <%= f.text_field :name, size: 40 %>
   </div>
   <div class="span8 offset3">
-    <%= f.label :email %><em>We will email you a receipt of this order. We will not use your email for any other purpose.</em>  <br>
+    <%= f.label :email %><em>We email a receipt of this order. We do not use your email for any other purpose.</em>  <br>
     <%= f.email_field :email, size: 40 %>
   </div>
 <!-- these fields are disabled before submission and are never transmitted back to rails -->
@@ -64,5 +67,8 @@
     <%= f.submit 'Place Order', class: "btn-small btn-primary"  %>
   </div>
 <% end %>
-
+</div>
+<div class="span2">
+  <a href="https://www.positivessl.com" style="font-family: arial; font-size: 10px; color: #212121; text-decoration: none;"><img src="https://www.positivessl.com/images-new/PositiveSSL_tl_trans2.gif" alt="SSL Certificate" title="SSL Certificate" border="0" /></a>
+</div>
 
