--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -6,6 +6,7 @@
     <section>
       <%= render @cart %>
     </section>
+    </section>
   </aside>
   <div class="row">
   <div class="span4">
@@ -30,7 +31,7 @@
         <th>Order Total:</th>
         <td>
           <div class="text-right">
-            <%= (number_to_currency @total_transaction_amount.to_d / 100.0)  %>
+            <strong><%= (number_to_currency @total_transaction_amount.to_d / 100.0)  %></strong>
           </div>
         </td>
       </tr>
@@ -38,8 +39,8 @@
     <%= button_to 'Continue Shopping', campaigns_path, method: :get, class: "btn-small btn-primary" %>
   </div>
   <div class="span5">
-    <div class="well"> 5% of the value of this transaction (<%= (number_to_currency @organizer_credit.to_d / 100.0) %>) will be donated to the organization running this Gift Card campaign. We get this money from Amazon when we order the gift card. Funds are not taken out of your Gift Card contributions.<br><br>
-    The handling fee pays for credit card processing. Our service provider, Stripe.com, encrypts and processes all credit card transactions. Credit card information is <u>never</u> stored on ThankTheTeacher.com. 
+    <div class="well">5% of the value of your transaction (<%= (number_to_currency @organizer_credit.to_d / 100.0) %>) will be donated to the gifting organization. We get this money from Amazon (not from your contribution).<br><br>
+    The handling fee pays for secure credit card processing. Credit card information is <u>never</u> stored on ThankTheTeacher.com.
     </div>
   </div>
   <%= render 'form' %>
