--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -31,9 +31,9 @@
     <%= will_paginate @recipients %> 
     <table class="table table-striped table-bordered">
       <tr>
-        <th align="right">First</th>
-        <th align="left">Last</th>
-        <th align="left">Occupation</th>
+        <th align="left"><%= sortable "first_name", "First" %></th>
+        <th align="left"><%= sortable "last_name", "Last" %></th>
+        <th align="left"><%= sortable "title", "Occupation" %></th>
         <th align="left">Gift</th>
       </tr>
       <%= render @recipients %>
