table sort correction

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -219,6 +219,13 @@ aside {
 
 /* miscellaneous */
 
+.glyphicons-lg {
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 6px;
+}
+
 .debug_dump {
   clear: both;
   float: left;
