--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,5 +1,5 @@
 <% unless cart.line_items.empty? %>
-  <h4> Your Cart </h4>
+  <h4><i class="icon-shopping-cart"></i> Your Cart </h4> 
   <table class="table table-bordered table-condensed">
     <%= render(@cart.line_items) %>
     <tr>
