--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -23,6 +23,6 @@
     <p>At checkout, credit card information is immediately encrypted and sent directly to our payment processing service Stripe.com. Credit card information is <u>never</u> stored on ThankTheTeacher.com. </p>
 
     <br>
-    <p>If you have questions, suggestions, or need help, please contact <a href="mailto: matthew.r.newell@gmail.com">Matt</a>. </p>
+    <p>If you have questions, suggestions, or need help, please contact <a href="mailto: matt@thanktheteacher.com">Matt</a>. </p>
   </div>
 </div>
