--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Help') %>
 <h3>How to Run a Successful Gift Card Campaign</h3>
-
+<div class="well"><em>We are accepting a limited number of campaign organizers for the 2013 holiday season and hope to open our doors to a wider audience in early 2014. If you are interested in setting up a Gift Card Campaign in 2013, please contact <a href="mailto: matt@thanktheteacher.com">Matt.</a></em></div>
 
 <h5>Account Setup</h5>
 <li>Create an account on ThankTheTeacher.com.</li>
