--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -31,10 +31,10 @@
     <%= will_paginate @recipients %> 
     <table class="table table-striped table-bordered">
       <tr>
-        <th align="left"><%= sortable "first_name", "First" %></th>
-        <th align="left"><%= sortable "last_name", "Last" %></th>
-        <th align="left"><%= sortable "title", "Occupation" %></th>
-        <th align="left">Gift</th>
+        <th><%= sortable "first_name", "First " %></th>
+        <th><%= sortable "last_name", "Last " %></i></th>
+        <th><%= sortable "title", "Job " %></i></th> 
+        <th>Gift</th>
       </tr>
       <%= render @recipients %>
     </table>
